kubernetes-manifests/visit-count.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: visit-count
spec:
  selector:
    matchLabels:
      app: visit-count
  template:
    metadata:
      labels:
        app: visit-count
    spec:
      containers:
      - name: visit-count
        image: dhvlptl/visit-count
        resources:
          limits:
            memory: "100Mi"
            cpu: "100m"
        ports:
        - containerPort: 4000
---
apiVersion: v1
kind: Service
metadata:
  name: visit-count
spec:
  selector:
    app: visit-count
  ports:
  - port: 4000
    targetPort: 4000
