kubernetes-manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-router
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - host: staging.webdevlearner.in
    http:
      paths:
      - path: /visit(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: visit-count
            port:
              number: 4000
